--- a/Code/public/.htaccess
+++ b/Code/public/.htaccess
@@ -12,4 +12,5 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+    RewriteCond %{REQUEST_URI} !^/blog/?$
 </IfModule>
